compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__exhaustiveness__bit_array_1.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 466
expression: "\npub fn main(x) {\n  case x {\n    <<>> -> 1\n    <<1>> -> 1\n    <<2>> -> 1\n  }\n}\n"
---

warning: Inexhaustive Patterns
  ┌─ /src/warning/wrn.gleam:3:3
  │  
3 │ ╭   case x {
4 │ │     <<>> -> 1
5 │ │     <<1>> -> 1
6 │ │     <<2>> -> 1
7 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values.
If is run on one of the values without a pattern then it will crash.

The missing patterns are:

    _

In a future version of Gleam this will become a compile error.


