compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__exhaustiveness__bit_array_overlapping_patterns_are_redundant.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "pub fn main() {\n  let bit_array = <<>>\n  case bit_array {\n    <<1, a:size(16)>> -> a\n    <<1, b:size(8)-unit(2)>> -> b\n    _ -> 2\n  }\n}"
---
----- SOURCE CODE
pub fn main() {
  let bit_array = <<>>
  case bit_array {
    <<1, a:size(16)>> -> a
    <<1, b:size(8)-unit(2)>> -> b
    _ -> 2
  }
}

----- WARNING
warning: Unreachable case clause
  ┌─ /src/warning/wrn.gleam:5:5
  │
5 │     <<1, b:size(8)-unit(2)>> -> b
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

This case clause cannot be reached as a previous clause matches the same
values.

Hint: It can be safely removed.
