compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__exhaustiveness__bit_array_overlapping_redundant_patterns_with_variable_size.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "pub fn main() {\n  let bit_array = <<>>\n  let len = 3\n  case bit_array {\n    <<a:size(len), _:size(16)>> -> a\n    <<_:size(len), b:size(8)-unit(2)>> -> b\n    _ -> 2\n  }\n}"
---
----- SOURCE CODE
pub fn main() {
  let bit_array = <<>>
  let len = 3
  case bit_array {
    <<a:size(len), _:size(16)>> -> a
    <<_:size(len), b:size(8)-unit(2)>> -> b
    _ -> 2
  }
}

----- WARNING
warning: Unreachable case clause
  ┌─ /src/warning/wrn.gleam:6:5
  │
6 │     <<_:size(len), b:size(8)-unit(2)>> -> b
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

This case clause cannot be reached as a previous clause matches the same
values.

Hint: It can be safely removed.
