compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__exhaustiveness__case_error_prints_unqualified_value.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "\nimport wibble.{Wibble, Wobble}\npub fn main() {\n    case Wobble {\n        Wibble -> Nil\n    }\n}\n"
---
error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:4:5
  │  
4 │ ╭     case Wobble {
5 │ │         Wibble -> Nil
6 │ │     }
  │ ╰─────^

This case expression does not have a pattern for all possible values.
If it is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Wobble
